--- a/Matschie_Salesforce/test-output/index.html
+++ b/Matschie_Salesforce/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\garla\AppData\Local\Temp\testng-eclipse-482464013\testng-customsuite.xml</span>
+                    <span>C:\Users\garla\AppData\Local\Temp\testng-eclipse--1272510946\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Create a new contact with details&quot;, &quot;Create New Contact&quot;)">runScenario("Create a new contact with details", "Create New Contact")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Delete an existing contact with details&quot;, &quot;Create New Contact&quot;)">runScenario("Delete an existing contact with details", "Create New Contact")</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Delete an existing Lead with details&quot;, &quot;Create New Lead&quot;)">runScenario("Delete an existing Lead with details", "Create New Lead")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -117,7 +112,32 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Create a new contact with details&quot;, &quot;Create New Contact&quot;)">runScenario("Create a new contact with details", "Create New Contact")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Create a new Lead with details&quot;, &quot;Create New Lead&quot;)">runScenario("Create a new Lead with details", "Create New Lead")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Update an existing Lead with details&quot;, &quot;Create New Lead&quot;)">runScenario("Update an existing Lead with details", "Create New Lead")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Update an existing contact with details&quot;, &quot;Create New Contact&quot;)">runScenario("Update an existing contact with details", "Create New Contact")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Delete an existing contact with details&quot;, &quot;Create New Contact&quot;)">runScenario("Delete an existing contact with details", "Create New Contact")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="runner.RunTest" hash-for-method="runScenario(&quot;Verify Lead deleted&quot;, &quot;Create New Lead&quot;)">runScenario("Verify Lead deleted", "Create New Lead")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -140,20 +160,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Create a new contact with details&quot;, &quot;Create New Contact&quot;)">
-                  </a> <!-- runScenario("Create a new contact with details", "Create New Contact") -->
+                  <a name="runScenario(&quot;Delete an existing Lead with details&quot;, &quot;Create New Lead&quot;)">
+                  </a> <!-- runScenario("Delete an existing Lead with details", "Create New Lead") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Create a new contact with details", "Create New Contact")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Delete an existing contact with details&quot;, &quot;Create New Contact&quot;)">
-                  </a> <!-- runScenario("Delete an existing contact with details", "Create New Contact") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Delete an existing contact with details", "Create New Contact")</span>
+                  <span class="parameters">("Delete an existing Lead with details", "Create New Lead")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -170,10 +180,60 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="runScenario(&quot;Create a new contact with details&quot;, &quot;Create New Contact&quot;)">
+                  </a> <!-- runScenario("Create a new contact with details", "Create New Contact") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Create a new contact with details", "Create New Contact")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Create a new Lead with details&quot;, &quot;Create New Lead&quot;)">
+                  </a> <!-- runScenario("Create a new Lead with details", "Create New Lead") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Create a new Lead with details", "Create New Lead")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Update an existing Lead with details&quot;, &quot;Create New Lead&quot;)">
+                  </a> <!-- runScenario("Update an existing Lead with details", "Create New Lead") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Update an existing Lead with details", "Create New Lead")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="runScenario(&quot;Update an existing contact with details&quot;, &quot;Create New Contact&quot;)">
                   </a> <!-- runScenario("Update an existing contact with details", "Create New Contact") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("Update an existing contact with details", "Create New Contact")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Delete an existing contact with details&quot;, &quot;Create New Contact&quot;)">
+                  </a> <!-- runScenario("Delete an existing contact with details", "Create New Contact") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Delete an existing contact with details", "Create New Contact")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verify Lead deleted&quot;, &quot;Create New Lead&quot;)">
+                  </a> <!-- runScenario("Verify Lead deleted", "Create New Lead") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verify Lead deleted", "Create New Lead")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -183,7 +243,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\garla\AppData\Local\Temp\testng-eclipse-482464013\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\garla\AppData\Local\Temp\testng-eclipse--1272510946\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -240,28 +300,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runner.RunTest')
-data.setCell(0, 3, 12271);
+data.setCell(0, 3, 15953);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'runner.RunTest')
-data.setCell(1, 3, 1281);
+data.setCell(1, 3, 1320);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'runner.RunTest')
-data.setCell(2, 3, 1181);
+data.setCell(2, 3, 1204);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'runScenario')
 data.setCell(3, 2, 'runner.RunTest')
-data.setCell(3, 3, 1048);
+data.setCell(3, 3, 1159);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'runScenario')
+data.setCell(4, 2, 'runner.RunTest')
+data.setCell(4, 3, 1148);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'runScenario')
+data.setCell(5, 2, 'runner.RunTest')
+data.setCell(5, 3, 1145);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'runScenario')
+data.setCell(6, 2, 'runner.RunTest')
+data.setCell(6, 3, 1125);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'runScenario')
+data.setCell(7, 2, 'runner.RunTest')
+data.setCell(7, 3, 972);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -294,23 +370,39 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Create a new contact with details", "Create New Contact")</span>
-                <span class="method-start">3090 ms</span>
+                <span class="method-start">1641 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Update an existing contact with details", "Create New Contact")</span>
-                <span class="method-start">15372 ms</span>
+                <span class="method-start">17629 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Delete an existing contact with details", "Create New Contact")</span>
-                <span class="method-start">16425 ms</span>
+                <span class="method-start">18760 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verify contact deleted", "Create New Contact")</span>
-                <span class="method-start">17611 ms</span>
+                <span class="method-start">19910 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Create a new Lead with details", "Create New Lead")</span>
+                <span class="method-start">20886 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Update an existing Lead with details", "Create New Lead")</span>
+                <span class="method-start">22300 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Delete an existing Lead with details", "Create New Lead")</span>
+                <span class="method-start">23456 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Verify Lead deleted", "Create New Lead")</span>
+                <span class="method-start">24621 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">18919 ms</span>
+                <span class="method-start">25850 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
